public/ACP/css/css.css
:root {
  /* Taken from https://github.com/system-fonts/modern-font-stacks */
  --neo-grotesque:
    inter, roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", arial,
    sans-serif;
  --monospace-code:
    ui-monospace, "Cascadia Code", "Source Code Pro", menlo, consolas,
    "DejaVu Sans Mono", monospace;
  --background-color: #fff;
  --text-color: #000;
  --link-color: #00f;
  --input-background-color: #fff;
}

/* dark mode */
@media (prefers-color-scheme: dark) {
  :root {
    --background-color: #1b1f23;
    --input-background-color: #24292e;
    --text-color: #fff;
    --link-color: #71b7fb;
  }
}

html {
  font-size: 62.5%; /* set 1rem to 10px */
  text-size-adjust: none;
}

body {
  color: var(--text-color);
  margin: 0;
  padding: 0;
  font-size: 1.2rem;
  font-family: var(--neo-grotesque);
  background: #152b49;
}

datalist {
  display: flex;
  justify-content: space-between;
  width: 120px;
  margin-left: 145px;
}

h2 {
  font-size: 1.4rem;
}

textarea {
  width: 300px;
  height: 75px;
}

input[type="range"] {
  width: 120px;
}

input[type="text"] {
  width: 200px;
}

input[type="text"],
textarea,
select {
  background: var(--input-background-color);
  color: var(--text-color);
  border: 1px solid #aad;
}

label {
  margin: 5px;
  display: inline-block;
  width: 130px;
}

a {
  color: var(--link-color);

  &:visited {
    color: var(--link-color);
  }
}

/* Utility classes */
.center {
  text-align: center;
}

.full-row {
  grid-column: 1 / -1;
}

#header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  background: url("../img/acp-header.png") no-repeat;
}

#logo {
  display: block;
  width: 360px;
  height: 96px;
}

#userbox {
  align-self: center;
  padding: 10px;
  color: #fff;
  font-size: 1.6rem;

  & a {
    margin-left: 30px;
    color: #69f;
  }
}

#page {
  border-top: 1px solid #333;
  background: url("../img/pagebg.png") repeat-x #152b49;
}

#nav {
  background: linear-gradient(to bottom, #f4f4f4, #bebebe 95%, #f4f4f4);
  background-size: 1px 33px;
  border: 1px solid #000;

  & a {
    margin: 0;
    padding: 0;
    display: inline-block;
    text-indent: -1000px;
    background: url("../img/acp-nav-icons.png") 0 0;
    height: 33px;

    &:hover,
    &.active {
      background-position-y: -33px;
    }

    &.settings {
      width: 87px;
    }

    &.members {
      width: 92px;
      background-position-x: -87px;
    }

    &.groups {
      width: 84px;
      background-position-x: -179px;
    }

    &.themes {
      width: 93px;
      background-position-x: -263px;
    }

    &.posting {
      width: 86px;
      background-position-x: -356px;
    }

    &.forums {
      width: 84px;
      background-position-x: -442px;
    }

    &.tools {
      width: 81px;
      background-position-x: -526px;
    }
  }
}

.sidebar {
  box-shadow: #124 -5px 5px 5px;
  background-color: var(--background-color);
  margin: 20px 0;
  line-height: 20px;
  padding: 10px;
  border: 1px solid #000;
}

@media only screen and (width >= 600px) {
  .sidebar {
    box-shadow: #124 -5px 5px 5px;
    line-height: 20px;
    padding: 10px;
    margin: 40px 10px;
    width: 169px;
    background: linear-gradient(to left, #222 0%, var(--background-color) 20%)
      right repeat-y #eee;
    float: left;
    border: 1px solid #000;
  }

  .right {
    margin-left: 200px;
  }

  .box {
    margin-left: 10px;
    margin-right: 10px;
  }
}

.switch {
  width: 50px;
  height: 25px;
  cursor: pointer;
  display: inline-block;
  border: none;

  &.yn {
    background: url("../img/yesno.png");
  }
}

.skins,
.wrappers {
  border-collapse: collapse;
  width: 100%;
}

.skins th,
.wrappers th {
  padding: 10px;
  text-align: left;
}

.skins td,
.wrappers td {
  padding: 10px;
  border-top: 1px solid #ccc;
}

.badwords {
  border-collapse: collapse;
  min-width: 300px;

  & td {
    padding: 10px;
    text-align: center;
    border-top: 1px solid #ccc;
  }
}

.pages {
  min-width: 300px;
  border-collapse: collapse;

  & td {
    border-top: 1px solid #ccc;
    padding: 10px;
  }
}

.perms {
  width: 100%;
  border-collapse: collapse;

  .sticky-heading {
    padding-left: 150px;
    width: 100%;
    background: var(--background-color);
    position: sticky;
    top: 0;
  }

  & th {
    font-weight: bold;
  }

  & .breaker {
    background: url("../img/acp-box-header.png") repeat-x;
    padding: 3px;
    color: #fff;
    border: 1px solid #000;
    font-size: 1.4rem;
  }
}

#perms {
  border-collapse: collapse;
  width: 100%;

  & td {
    border-top: 1px solid #ccc;
    text-align: center;
  }

  & td:first-child {
    text-align: left;
  }
}

.box {
  margin: 20px 0 0;
  border: 1px solid #000;
  box-shadow: #124 -5px 5px 5px;
  background: var(--background-color);

  & .header {
    background: linear-gradient(#1b63b6, #192c44);
    border-bottom: 1px solid #000;
    line-height: 36px;
    font-size: 1.6rem;
    color: #fff;
    padding-left: 10px;
  }

  & .content {
    padding: 10px;
    line-height: 20px;
  }
}

.dropdownMenu {
  display: none;
  border: 1px solid #000;
  background: #a3a3a3;
  min-width: 100px;
  position: absolute;
  border-top: none;
  z-index: 100;

  & a {
    display: block;
    color: #333;
    padding: 10px;
    text-decoration: none;
    border: 1px solid #a3a3a3;
    border-style: solid none;

    &:hover {
      background: #bbb;
      border: 1px solid #000;
      border-style: solid none;
    }
  }
}

.tree {
  max-width: 500px;
  border: 1px solid #ccc;
  cursor: row-resize;

  & .seperator {
    list-style-type: none;
    margin-left: -20px;
    height: 10px;
  }

  & .highlight {
    background: #eef;
    border: 1px solid #ccf;
  }

  & a.icons {
    visibility: hidden;
  }

  & li:hover > a.icons {
    visibility: visible;
  }
}

.success {
  color: #0a0;
  background: #efe;
  border: 1px solid #0a0;
  padding: 5px;
}

.error {
  background: #fcc;
  border: 1px solid #f33;
  margin: 5px;
  padding: 5px;
}

.editor {
  width: 100%;
  height: 800px;
}

/* AutoComplete */
#autocomplete {
  position: absolute;
  border: 1px solid #000;
  background: #eef;
  text-align: left;

  & div {
    padding: 5px;
    cursor: pointer;

    &:hover,
    &.selected {
      color: #00f;
      background: #f5f5ff;
      border: 1px solid #669;
      border-style: solid none;
    }
  }
}

#validname.valid,
#validname.invalid,
#validname2.invalid,
#validname2.valid {
  display: inline-block;
  margin-left: 10px;
  width: 30px;
  height: 25px;
  background: url("../img/yesno.png") bottom center;
}

#validname.valid,
#validname2.valid {
  background-position: top center;
}

.icons {
  background: url("../img/icons.png") no-repeat;
  padding-left: 20px;
  display: inline-block;
  height: 16px;

  &.edit {
    background-position: 0 0;
    border: 0;
    cursor: pointer;
  }

  &.delete {
    background-position: 0 -32px;
  }

  &.home {
    background-position: 0 -64px;
  }

  &.trashcan {
    background-position: 0 -96px;
  }
}

.news p {
  text-indent: 20px;

  & .signature {
    font-style: italic;
  }
}

#files {
  min-width: 200px;
  border-collapse: collapse;

  & td {
    padding: 5px 20px;
    border-top: 1px solid #ccc;
  }
}

table.settings {
  border-collapse: collapse;
  width: 100%;

  & td {
    border: 1px solid #ccc;
    padding: 10px;
  }

  & th[scope="row"] {
    width: 200px;
  }
}

